--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -20,3 +20,9 @@
   max-width: 400px;
   margin: auto;
 }
+
+@media screen and (max-width: 430px) {
+  .container {
+    padding: 1rem 0px;
+  }
+}
