--- a/src/view/booking-history/booking-history.module.css
+++ b/src/view/booking-history/booking-history.module.css
@@ -12,6 +12,14 @@
   font-weight: 700;
 }
 
+@media screen and (max-width: 430px) {
+  .container {
+    max-width: 100%;
+    margin: auto 24px;
+    padding: 0px;
+  }
+}
+
 .appointments {
   /* overflow-x: scroll;
   height: calc(100vh - 1rem - 3rem - 3.5rem); */
